--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   },
   "homepage": "https://github.com/allyavorsky/homework-62#readme",
   "dependencies": {
+    "cookie-parser": "^1.4.7",
     "express": "^5.1.0"
   }
 }
